2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Work around GTK+ drawing the "spinbutton" box always with state
	NORMAL.

2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters):
	Undo Andrea's change from 2008-03-19. The check was moved to fix
	the spinbutton arrow sensitivity. (See bug #475629.)

2008-03-20  Christian Persch  <chpe@gnome.org>

	* configure.ac: Add AM_PROG_CC_C_O. Bug #523369.

2008-03-19  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters):
	Fix? Workaround?
	Anyway this fixes insensitive spinbuttons

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scale_trough):
	Use shade[2] taken from parentbg to draw the scale trough

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):
	Got the notebook check a bit wrong earlier.

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_inset):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_inset),
	(clearlooks_glossy_draw_light_inset):
	* engines/crux/src/crux-draw.c: (paint_shadow), (draw_shadow),
	(draw_box), (draw_extension):
	Fix compiling with --enable-paranoia. Included here is the patch
	from Jens Granseuer for bug #521679.

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/thinice/src/thinice_rc_style.h:
	mark_type2 and paned_dots used the same bit (also fixes compiling
	with --enable-paranoia)

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):
	Only use the notebooks background if it draws a border.
